# oci_compute_health_check_audit_project

./: Makefile  README.md  oci_compute_audit.py  pyproject.toml  requirements.txt
examples/: run_all_regions.sh  run_single_compartment.sh
policies/: policy.example.yaml
src/oci_compute_health_check_audit/: cli.py
